# ai_coding

./: README.md  pyproject.toml
docs/: pipeline-guide.md  ui-handoff.md  ui-implementation-guide-part2.md  ui-implementation-guide.md  ui-verification-report.md
docs/diagrams/: context-management.md  execution-phase.md  test-strategy.md  workflow.md
improvements/: 01-solution.md  01-unstructured-milestone-scope-files.md  02-context-weight-not-validated-at-execution.md  02-solution.md  03-no-prd-schema-validation.md  04-context-bundle-unverified.md  05-static-claude-md.md  06-fragile-test-id-extraction.md  07-stale-bugfix-context.md  08-config-scope-file-drift.md  09-domain-blind-fix-prompts.md  10-non-fatal-reconciliation-drift.md  solution_2.md
src/ralph_pipeline/: __init__.py  __main__.py  cli.py  config.py  context_refresh.py  context_validator.py  fix_context.py  git_ops.py  lockfile.py  log.py  milestone_schema.py  prd_schema.py  runner.py  state.py  usage.py  (+1 more)
src/ralph_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_additional.py  test_ai_env.py  test_cli.py  test_config.py  test_context_refresh.py  test_context_validator.py  test_cost_tracking.py  test_fix_context.py  test_health.py  test_milestone_schema.py  test_phase0.py  test_prd_schema.py  test_prompts.py  test_qa_review.py  test_ralph_loop.py  test_reconciliation_drift.py  test_regression.py  test_runner.py  test_state.py  test_subprocess.py
ui/: .env.example  Dockerfile.backend  README.md  build.sh  dev.sh  docker-compose.yml
(+212 files in other folders)
