[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-pipeline"
version = "1.0.0"
description = "AI Coding Pipeline Orchestrator — replaces pipeline.sh"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "transitions>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
ralph-pipeline = "ralph_pipeline.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ralph_pipeline = ["py.typed", "data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["src"]
